--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,14 @@ prune common
 include LICENSE
 include hoverxref/_static/js/hoverxref.js_t
 include hoverxref/_static/js/tooltipster.bundle.min.js
-include hoverxref/_static/js/tooltipster-scrolllableTip.min.js
+include hoverxref/_static/js/tooltipster-scrollableTip.min.js
 include hoverxref/_static/css/tooltipster.bundle.min.css
 include hoverxref/_static/css/tooltipster-sideTip-shadow.min.css
 include hoverxref/_static/css/tooltipster.custom.css
+include hoverxref/_static/css/tooltipster-sideTip-borderless.min.css
+include hoverxref/_static/css/tooltipster-sideTip-light.min.css
+include hoverxref/_static/css/tooltipster-sideTip-noir.min.css
+include hoverxref/_static/css/tooltipster-sideTip-punk.min.css
+
+
+
